react-trend-deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trend
  labels:
    name: trend
    app: trend-app
