react-trend-deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trend-app-service
  namespace: trend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: trend-app
